my first commit

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,8 @@
 
 <body>
   <main>
-    <h1>Vanilla JavaScript App</h1>
+    <h1>This my first static web app</h1>
+    <h3>Happy birthday Saranya!!!!!</h3>
   </main>
 </body>
 
